# libuvc-android-prefab

./: .gitmodules  build.gradle  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
libuvc/: build.gradle
libuvc/src/main/: AndroidManifest.xml
libuvc/src/main/cpp/: CMakeLists.txt
libuvc/src/main/cpp/include/: utlist.h
libuvc/src/main/cpp/include/libuvc/: libuvc.h  libuvc_internal.h
